--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cityofzion/neon-js": "^4.1.1",
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.7",
     "react": "^16.6.0",
