--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
+    "react-fontawesome": "^1.6.1",
     "react-qr-reader": "^2.1.1",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
