--- a/package.json
+++ b/package.json
@@ -36,17 +36,20 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
+    "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
+    "qrcode.react": "^0.8.0",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-fontawesome": "^1.6.1",
+    "react-notifications": "^1.4.3",
     "react-qr-reader": "^2.1.1",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
