Added video capture

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-qr-reader": "^2.1.1",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
+    "react-webcam": "^1.0.4",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
