--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.1.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -49,6 +50,7 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-fontawesome": "^1.6.1",
+    "react-geolocated": "^2.4.0",
     "react-notifications": "^1.4.3",
     "react-qr-reader": "^2.1.1",
     "react-redux": "^5.1.0",
